# wbnova-godot-plugin

./: .gitignore  Cargo.toml  README.md  build.sh  test.gdscript
nova_api/: Cargo.toml
nova_api/src/objects/: abb.rs  activate_license_request_body_json.rs  add_request.rs  all_joint_positions_request.rs  all_joint_positions_response.rs  app.rs  auto_blending.rs  behavior.rs  binary_object.rs  body_upload_program_metadata_image.rs  body_upload_recipe_metadata_image.rs  capacity.rs  capsule.rs  capture.rs  cartesian_ptp.rs  cell.rs  cell_name.rs  circle.rs  code_with_arguments.rs  collider.rs  collider_dictionary.rs  collision.rs  collision_contact.rs  collision_feedback.rs  collision_motion_group.rs  collision_motion_group_assembly.rs  collision_motion_group_dictionary.rs  collision_motion_group_link.rs  collision_motion_group_tool.rs  collision_robot_configuration.rs  collision_scene.rs  collision_scene_assembly.rs  command.rs  command_settings.rs  commands_missing.rs  comparator.rs  compound.rs  configuration.rs  container_environment.rs  container_image.rs  (+228 more)
nova_api/src/paths/: activate_all_motion_groups.rs  activate_license.rs  activate_motion_group.rs  add_app.rs  add_coordinate_system.rs  add_robot_controller.rs  add_virtual_robot_coordinate_system.rs  add_virtual_robot_tcp.rs  calculate_all_inverse_kinematic.rs  calculate_forward_kinematic.rs  calculate_inverse_kinematic.rs  check_nova_version_update.rs  clear_all_objects.rs  clear_apps.rs  clear_devices.rs  clear_robot_controllers.rs  create_device.rs  create_program.rs  (+152 more)
nova_api/tests/: stream_state.rs
(+16 files in other folders)
