[package]
name = "nova_api"
version = "0.0.0"
edition = "2021"

[dependencies]
http = "1.3.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.44.0", features = ["full"]}
tokio-macros = "2.5.0"
tungstenite = { version = "0.24.0", features = ["native-tls"]}


